--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the people controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@mixin border-radius($radius: 4pt) {
+  border-radius: $radius;
+  -moz-border-radius: $radius;
+  -webkit-border-radius: $radius;
+}
+
+ul.people {
+  li {
+    margin: 8pt;
+    padding: 15pt;
+    background-color: #eee;
+    float: left;
+    @include border-radius(15pt);
+    img {
+      @include border-radius(8pt);
+    }
+  }
+}
+
+
