--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,21 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require base.css
+ *= require skeleton.css
+ *= require layout.css
+ *= require people.css
  *= require_self
- *= require_tree .
  */
+
+body {
+  font-family: cronos-pro, arial, sans-serif;
+  font-weight: 300;
+  font-size: 120%;
+  line-height: 150%;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: grad, georgia, serif;
+  font-weight: 700;
+}
